5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1671_1105.log
== TEST (2019-04-24 15:07:54) 
-- CODE:
brasao = input()
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:17:43) 
-- CODE:
b = input()
if(b == lobo):
	print("Casa: Stark")
elif(b == leao):
	print("Casa: Lannister")
elif(b == veado):
	print("Casa: Baratheon")
elif(b == dragao):
	print("Casa: Targaryen")
elif(b ==rosa):
	print("Casa: Tyrell")
elif(b ==sol):
	print("Casa: Martell")
elif(b ==lula):
	print("Casa: Greyjoy")
elif(b == esfolado):
	print("Casa: Bolton")
elif(b == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(b == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:20:44) 
-- CODE:
b = input()
if(b == lobo):
	print(b)
	print("Casa: Stark")
elif(b == leao):
	print(b)
	print("Casa: Lannister")
elif(b == veado):
	print(b)
	print("Casa: Baratheon")
elif(b == dragao):
	print(b)
	print("Casa: Targaryen")
elif(b ==rosa):
	print(b)
	print("Casa: Tyrell")
elif(b ==sol):
	print(b)
	print("Casa: Martell")
elif(b ==lula):
	print(b)
	print("Casa: Greyjoy")
elif(b == esfolado):
	print(b)
	print("Casa: Bolton")
elif(b == turta):
	print(b)
	print("Casa: Tully")
else:
	print(b)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(b == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:21:05) 
-- CODE:
b = input("")
if(b == lobo):
	print(b)
	print("Casa: Stark")
elif(b == leao):
	print(b)
	print("Casa: Lannister")
elif(b == veado):
	print(b)
	print("Casa: Baratheon")
elif(b == dragao):
	print(b)
	print("Casa: Targaryen")
elif(b ==rosa):
	print(b)
	print("Casa: Tyrell")
elif(b ==sol):
	print(b)
	print("Casa: Martell")
elif(b ==lula):
	print(b)
	print("Casa: Greyjoy")
elif(b == esfolado):
	print(b)
	print("Casa: Bolton")
elif(b == turta):
	print(b)
	print("Casa: Tully")
else:
	print(b)
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(b == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:22) 
-- CODE:
b = input("")
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado")
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- ERROR:
File "XXXX", line 6
    elif(b == "veado")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:30) 
-- CODE:
b = input()
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado")
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- ERROR:
File "XXXX", line 6
    elif(b == "veado")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:38) 
-- CODE:
b = input()
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- OUTPUT:
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:25:45) 
-- CODE:
b = input()
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- EXECUTION TIME:
0.158678
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:26:08) 
-- CODE:
b = input()
print("Entrada", b)
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:26:14) 
-- CODE:
b = input()
print("Entrada", b)
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- EXECUTION TIME:
0.140706
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:26:22) 
-- CODE:
b = input("")
print("Entrada", b)
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:26:30) 
-- CODE:
b = input("")
print("Entrada", b)
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- EXECUTION TIME:
0.158844
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:06) 
-- CODE:
b = input("")
print("Entrada", b)
if(b == "lobo"):
	print("Casa:" "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:20) 
-- CODE:
b = input("")
print("Entrada", b)
if(b == "lobo"):
	print("Casa: " "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:29) 
-- CODE:
b = input("")
print("Entrada:", b)
if(b == "lobo"):
	print("Casa: " "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:35) 
-- CODE:
b = input("")
print("Entrada:", b)
if(b == "lobo"):
	print("Casa: " "Stark")
elif(b == "leao"):
	print("Casa:", "Lannister")
elif(b == "veado"):
	print("Casa:", "Baratheon")
elif(b == "dragao"):
	print("Casa:", "Targaryen")
elif(b =="rosa"):
	print("Casa: Tyrell")
elif(b =="sol"):
	print("Casa:", "Martell")
elif(b =="lula"):
	print("Casa:", "Greyjoy")
elif(b == "esfolado"):
	print("Casa: Bolton")
elif(b == "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao", "invalido")
-- EXECUTION TIME:
0.187218
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
